# impact-vision

./: .gitignore  AGENTS.md  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  LICENSE  README.md  ROADMAP.md  memory_bank.md  pyproject.toml
data/: cids_unit_map.yaml  cn_sse_topics.yaml  concordance.yaml  core_metric_set_per_sdg.yaml  dd_checklist.yaml  ddq_bank.yaml  esrs_simplified_2026.yaml  exclusion_criteria.yaml  fund_thesis.climate_eu.yaml  fund_thesis.example.yaml  fund_thesis.gender_lens_south_asia.yaml  fund_thesis.inclusive_finance_africa.yaml  fund_thesis.indigenous_led_na.yaml  impact_vision.db  issb_adoption.yaml  living_wage_benchmarks.yaml  sasb_overrides.yaml  scoring_config.yaml  sdg_keywords.yaml  sdg_keywords_es.yaml  sdg_keywords_fr.yaml  sdg_keywords_pt.yaml  sdg_need_context.yaml  tracked_standards.yaml
demo/: 01_impact_report.html  02_impact_report_dark.html  03_impact_report_branded.html  04_ic_memo.html  05_dd_report.html  06_investee_portal.html  README.md  _fetch_plotly.py  _namecheck.py  _screenshot.py  _verify.py  generate_demo.py  index.html  pig_farm_dd_questionnaire.docx  pig_farm_profile.json
docs/: code-review-report.md  cursor-integration.md  esg-toolbox-implementation-plan.md  fund-manager-guide.md  linkedin_launch_post.md  linkedin_v0_14_0_post.md  roadmap-updates-2026-07.md  roadmap-v1.md  roadmap-v2.md  roadmap-v3-implementation.md  roadmap-v3.md  roadmap-v4.md  roadmap-v5.md  roadmap-v6-implementation.md  roadmap-v6.md
examples/: claude_desktop_config.json  generate_pig_farm_reports.py  sample_company.yaml  sample_impact_report.html  sample_portfolio.csv
ohmo/: cli.py
project_document/: memory_bank_db.json
scripts/: add-to-path.bat  add-to-path.ps1  add-to-path.sh  check_imports.py  extract_core_metrics.py  list_tools.py  refresh_iris_catalog.py  refresh_ohesg_toolbox_snapshot.py
tests/: test_audit_trail_events.py  test_bug_hardening.py  test_climate_accounting.py  test_data_quality.py  test_decision_workflow_v5.py  test_edci_completeness.py  test_esg_toolbox.py  test_evidence_graph.py  test_impact.py  test_investee_collection.py  test_phases12_15.py  (+25 more)
(+354 files in other folders)
