[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "impact-vision"
version = "0.15.0"
description = "Open-source LLM-powered impact measurement and SDG alignment agent for VC/impact funds, built on OpenHarness"
readme = "README.md"
license = "MIT"
requires-python = ">=3.11"
authors = []

dependencies = [
    "anthropic>=0.40.0",
    "openai>=1.0.0",
    "rich>=13.0.0",
    "prompt-toolkit>=3.0.0",
    "textual>=0.80.0",
    "typer>=0.12.0",
    "pydantic>=2.0.0",
    "httpx>=0.27.0",
    "websockets>=12.0",
    "mcp>=1.0.0",
    "pyperclip>=1.9.0",
    "pyyaml>=6.0",
    "questionary>=2.0.1",
    "watchfiles>=0.20.0",
    "croniter>=2.0.0",
    # Impact-specific dependencies
    "openpyxl>=3.1.0",
    "pandas>=2.0.0",
    "plotly>=5.0.0",
    "jinja2>=3.1.0",
    "pymupdf>=1.24.0",
    "streamlit>=1.30.0",
    "fastapi>=0.111.0",
    "uvicorn[standard]>=0.30.0",
    "python-multipart>=0.0.9",
]

[project.optional-dependencies]
dev = [
    "pexpect>=4.9.0",
    "pytest>=8.0.0",
    "pytest-asyncio>=0.23.0",
    "pytest-cov>=5.0.0",
    "ruff>=0.5.0",
    "mypy>=1.10.0",
]

[project.scripts]
impact-vision = "openharness.cli:app"
iv = "openharness.cli:app"

[tool.hatch.build.targets.wheel]
packages = ["src/openharness"]

[tool.hatch.build]
exclude = [
    "/.git",
    "/.venv",
    "/.openharness-venv",
    "/.openharness",
    "/.pytest_cache",
    "/.mypy_cache",
    "/.ruff_cache",
    "/build",
    "/dist",
    "/OpenHarness",
]

[tool.hatch.build.targets.wheel.force-include]
"frontend/terminal/package.json" = "openharness/_frontend/package.json"
"frontend/terminal/tsconfig.json" = "openharness/_frontend/tsconfig.json"
"frontend/terminal/src" = "openharness/_frontend/src"
"data" = "openharness/_data"

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src", "."]
addopts = "--import-mode=importlib"
asyncio_mode = "auto"

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.mypy]
python_version = "3.11"
strict = true
